# WaveForge

./: README.md  index.html  pyproject.toml  start.sh
backend/app/: server.py
backend/app/routes/: recording_complete.py
deployment/: DEPLOYMENT_TUS.md
deployment/docker/: Dockerfile  docker-compose.yml
deployment/k8s/base/: configmap.yaml  deployment.yaml  pvc.yaml
docs/: BACKGROUND_SYNC.md
docs/architecture/: ARCHITECTURE.md  TUS_UPLOAD_SYSTEM.md
docs/releases/: RELEASE_NOTES_Alpha_0.1.md
frontend/src/: index.html  sw.js
tests/: conftest.py  requirements-test.txt
tests/bdd/: README.md  behave.ini  environment.py
tests/bdd/features/: connection_loss.feature  crash_recovery.feature  offline_recording.feature  online_recording.feature  performance.feature  ui_indicators.feature
tests/bdd/steps/: common_steps.py  connection_loss_steps.py  offline_recording_steps.py  online_recording_steps.py
tests/unit/: test_recording_complete.py
